RESOLVED FIXED160353
[iOS] HTMLMediaElement::updateVolume() calls MediaPlayer::volume() on null media player
https://bugs.webkit.org/show_bug.cgi?id=160353
Summary [iOS] HTMLMediaElement::updateVolume() calls MediaPlayer::volume() on null me...
Daniel Bates
Reported 2016-07-29 12:56:13 PDT
The test media/video-muted-after-setting-page-muted-state.html crashes when run in WebKitTestRunner.
Attachments
Stack trace (113.50 KB, text/plain)
2016-07-29 12:56 PDT, Daniel Bates
no flags
Patch (2.06 KB, patch)
2016-07-29 13:17 PDT, Daniel Bates
eric.carlson: review+
buildbot: commit-queue-
Archive of layout-test-results from ews125 for ios-simulator-wk2 (864.86 KB, application/zip)
2016-07-29 16:05 PDT, Build Bot
no flags
Daniel Bates
Comment 2 2016-07-29 12:59:16 PDT
Daniel Bates
Comment 3 2016-07-29 13:01:01 PDT
(In reply to comment #2) > m_player can be nullptr at > <https://trac.webkit.org/browser/trunk/Source/WebCore/html/HTMLMediaElement. > cpp?rev=203917#L4821>. Notice that below this iOS-specific code we bail out early if m_player is nullptr, <https://trac.webkit.org/browser/trunk/Source/WebCore/html/HTMLMediaElement.cpp?rev=203917#L4827>.
Daniel Bates
Comment 4 2016-07-29 13:03:51 PDT
(In reply to comment #3) > (In reply to comment #2) > > m_player can be nullptr at > > <https://trac.webkit.org/browser/trunk/Source/WebCore/html/HTMLMediaElement. > > cpp?rev=203917#L4821>. > > Notice that below this iOS-specific code we bail out early if m_player is > nullptr, > <https://trac.webkit.org/browser/trunk/Source/WebCore/html/HTMLMediaElement. > cpp?rev=203917#L4827>. err, this code is in a #else-clause For some reason we seem to expect that m_player is non-null for iOS.
Daniel Bates
Comment 5 2016-07-29 13:17:59 PDT
Eric Carlson
Comment 6 2016-07-29 13:21:11 PDT
Comment on attachment 284896 [details] Patch Thanks Dan!
Build Bot
Comment 7 2016-07-29 16:05:39 PDT
Comment on attachment 284896 [details] Patch Attachment 284896 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1775781 New failing tests: media/track/track-remove-quickly.html
Build Bot
Comment 8 2016-07-29 16:05:42 PDT
Created attachment 284909 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Daniel Bates
Comment 9 2016-07-29 17:12:41 PDT
(In reply to comment #7) > Comment on attachment 284896 [details] > Patch > > Attachment 284896 [details] did not pass ios-sim-ews (ios-simulator-wk2): > Output: http://webkit-queues.webkit.org/results/1775781 > > New failing tests: > media/track/track-remove-quickly.html This test failure is not related to this change and is covered by bug #160367.
Daniel Bates
Comment 10 2016-07-29 17:15:08 PDT
Note You need to log in before you can comment on or make changes to this bug.