[iOS] HTMLMediaElement::updateVolume() calls MediaPlayer::volume() on null media player https://bugs.webkit.org/show_bug.cgi?id=160353

Reviewed by Eric Carlson.

Using testing functions HTMLMediaElement::updateVolume() can be called on a <video> element
without an associated video. We should support this usage on iOS just as we do for non-iOS
ports.

The use of testing functions to call HTMLMediaElement::updateVolume() on a <video> element
without an associated video is demonstrated by the test LayoutTests/media/video-muted-after-setting-page-muted-state.html.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updateVolume):

Canonical link: https://commits.webkit.org/178516@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203930 268f45cc-cd09-0410-ab3c-d52691b4dbfc